# NLP-final-project

./: .gitignore  LICENSE  NLP.ipynb  NLP0529.ipynb  NLP0530.ipynb  README.md  api_tool.py  document.typ  gradioUI.py  nlp.py  pyproject.toml  references.bib  referenceupdated.txt  requirements.txt  實驗流程.txt  試驗地點.txt
