[project]
name = "nlp-final-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopy>=2.4.1",
    "google-genai>=2.6.0",
    "gradio>=6.15.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=3.2.0",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]
