[project]
name = "nlp-final-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopy>=2.4.1",
    "google-genai>=2.7.0",
    "gradio>=6.15.2",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]
