[project]
name = "nlp-final-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopy>=2.4.1",
    "google-genai>=2.8.0",
    "gradio>=6.17.3",
    "langchain>=1.3.7",
    "langchain-google-genai>=4.2.5",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]
